--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="date">19 de ago, 2025</span>
                     <button class="likebutton">♥️</button>
                 </div>
-                <a href="noticia.html">
+                <a href="noticias.html">
                     <h2 class="article-title">Parabéns Lari! 🎈🎂</h2>
                 </a>
                 <p class="article-content"> 
