--- a/noticias.html
+++ b/noticias.html
@@ -24,10 +24,18 @@
         </div>
     </header>
     <main>
-        <article>
+        <article class="noticia">
             <h2>Agora é oficial: o Windows 11 está vindo</h2>
             <p class="news-highlight">Uma nova geração de um sistema operacional que mudou a forma como usamos computadores</p>
             <img src="img/dicas-windows.jpg" alt="imagem">
+            <p class="news-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci officiis beatae quo odio. 
+                Quas eveniet facilis dicta, minima aliquid quaerat fuga nemo suscipit aut soluta maxime doloremque repudiandae vel ducimus obcaecati hic porro iste 
+                alias cupiditate iusto voluptatem ex atque? Totam quae asperiores magni dolore, quod eum dolorem omnis voluptas?
+            </p>
+            <p class="news-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci officiis beatae quo odio. 
+                Quas eveniet facilis dicta, minima aliquid quaerat fuga nemo suscipit aut soluta maxime doloremque repudiandae vel ducimus obcaecati hic porro iste 
+                alias cupiditate iusto voluptatem ex atque? Totam quae asperiores magni dolore, quod eum dolorem omnis voluptas?
+            </p>
             <p class="news-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci officiis beatae quo odio. 
                 Quas eveniet facilis dicta, minima aliquid quaerat fuga nemo suscipit aut soluta maxime doloremque repudiandae vel ducimus obcaecati hic porro iste 
                 alias cupiditate iusto voluptatem ex atque? Totam quae asperiores magni dolore, quod eum dolorem omnis voluptas?
